--- a/src/App.css
+++ b/src/App.css
@@ -757,6 +757,14 @@
   transform: scale(1.05);
 }
 
+.bottom-nav-btn:focus {
+  outline: none;
+}
+
+.bottom-nav-btn:active {
+  outline: none;
+}
+
 /* Toast Notifications */
 .toast {
   position: fixed;
